# pytorch-hamming

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  hamming_core.pyi  justfile  pyproject.toml  pyrightconfig.json  test.py  visualize.py  vulnerability.py
.zed/: debug.json
crates/faultforge/: Cargo.toml
crates/faultforge-bindings/: Cargo.toml
crates/faultforge-bindings/src/: common.rs  comparison.rs  embedded_parity.rs  encoding_bit_pattern.rs  encoding_full.rs  generic_fault_injection.rs  lib.rs  single_bit_encoding.rs
crates/faultforge/benches/: chunking.rs
crates/faultforge/src/: bit_buffer.rs  buffers.rs  lib.rs  prelude.rs
crates/faultforge/src/bit_buffer/: bits.rs  byte_chunked.rs  chunks.rs
crates/faultforge/src/buffers/: limited.rs  non_uniform.rs  uniform.rs
crates/faultforge/src/encoding/: bit_patterns.rs  embedded_parity.rs  msb.rs  secded.rs
examples/: encode_decode.py  reliability.py
faultforge/: data.py  system.py  tensor_ops.py
faultforge/cifar/: model.py  system.py
faultforge/cli/: __main__.py  draw.py  main.py  record.py  strip_faults.py
faultforge/encoding/: _tensor.py  bit_pattern.py  embedded_parity.py  full.py  msb.py  secded.py  sequence.py  system.py
faultforge/imagenet/: model.py  system.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunked.rs  encode_decode.rs
hamming/: Cargo.toml  pyproject.toml
hamming-core/: Cargo.toml  hamming_core.pyi
hamming-core/fuzz/: Cargo.toml
hamming-core/fuzz/fuzz_targets/: encode_decode.rs
hamming-core/src/: bit_buffer.rs  buffers.rs  byte_array.rs  byte_ops.rs  conversions.rs  encoding.rs  lib.rs  msb_encoding.rs  padded_buffer.rs  prelude.rs  python.rs  u64.rs  wrapper.rs
hamming-core/src/bit_buffer/: byte_chunked.rs  chunks.rs  float.rs  int.rs  non_uniform.rs  random_picker.rs  sequence.rs  tests.rs  unsigned.rs
hamming-core/src/buffers/: limited.rs  non_uniform.rs  uniform.rs
hamming-core/src/encoding/: bit_patterns.rs  embedded_parity.rs  impls.rs  secded.rs  tests.rs  zeroable.rs
hamming-core/src/python/: common.rs  comparison.rs  embedded_parity.rs  encoding.rs  encoding_bit_pattern.rs  encoding_full.rs  fault_injection.rs  generic.rs  generic_fault_injection.rs  single_bit_encoding.rs  u128.rs  u256.rs  u32.rs  u64.rs
hamming-core/src/wrapper/: limited.rs  non_uniform.rs  padded.rs  uniform.rs
hamming/src/: byte_array.rs  lib.rs  u64.rs
hamming_core/: Cargo.toml  pyproject.toml
hamming_core/src/: byte_array.rs  lib.rs
hamming_utils/: __init__.py  _core.py  _data.py
pytorch_ecc/: __init__.py  _data.py  _hamming.py
pytorch_ecc/_hamming/: __init__.py
pytorch_ecc/_utils/: __init__.py  tests.py
scripts/: data_mean_over_time.py  data_overview.py  draw.py  gather_data.py  visualize.py
src/: bit_buffer.rs  lib.rs  python.rs
src/hamming_utils/: __init__.py  __main__.py  _common.py  _core.py  _data.py  _stats.py
src/hamming_utils/cli/: __init__.py  _core.py
src/hamming_utils/encoding/: __init__.py  _bit_pattern.py
src/hamming_utils/generic/: __init__.py  _core.py
src/hamming_utils/systems/: __init__.py  _core.py  _dataset.py  _dtype.py  _model.py
src/hamming_utils/tensor_ops/: __init__.py  _core.py
src/hamming_utils/u128/: __init__.py  _core.py
src/hamming_utils/u256/: __init__.py  _core.py
src/hamming_utils/u32/: __init__.py  _core.py
src/hamming_utils/u64/: __init__.py  _core.py
src/hamming_utils/utils/: __init__.py  _core.py
src/python/: comparison.rs  encoding_bit_pattern.rs  encoding_full.rs
src/pytorch_hamming/: __init__.py  __main__.py  _core.py  _data.py  _dtype.py  _system.py  data.py  dtype.py  fault_injector.py  system.py  tensor_ops.py  utils.py
src/pytorch_hamming/cifar/: dataset.py  model.py  system.py
src/pytorch_hamming/cifar_models/: __init__.py  dataset.py  model.py  system.py
src/pytorch_hamming/cli/: __main__.py  _core.py  draw.py  draw_mean.py  main.py  record.py  strip_faults.py  utils.py
src/pytorch_hamming/encoding/: __init__.py  _bit_pattern.py  _core.py  _full.py  _system.py  _tensor.py  bit_pattern.py  embedded_parity.py  encoding.py  full.py  msb.py  sequence.py  system.py
src/pytorch_hamming/imagenet/: __init__.py  dataset.py  model.py  system.py
src/pytorch_hamming/systems/: __init__.py  _core.py  _dataset.py  _model.py
src/pytorch_hamming/tensor_ops/: __init__.py  _core.py
src/pytorch_hamming/utils/: _core.py
