[project]
name = "pytorch-hamming"
version = "0.0.0"
description = "Error correction utilities for pytorch"
authors = [
    { name = "Marten Roots", email = "marten.roots@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "hamming-core",
    "numpy>=2.3.1",
    "pydantic>=2.12.3",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "ruff>=0.12.4",
]
torchvision = [
    "torchvision>=0.22.1",
]
cifar = [
    { include-group = "torchvision"}
]
cli = [
    "matplotlib>=3.10.5",
    { include-group = "cifar"}
]
imagenet = [
    "pillow>=11.3.0",
    "timm>=1.0.22",
    { include-group = "torchvision"}
]
all = [
    { include-group = "cifar"},
    { include-group = "cli"},
    { include-group = "imagenet"},
]

[tool.uv]
default-groups = ["dev", "all"]

[tool.uv.sources]
hamming-core = { workspace = true }

[tool.uv.workspace]
members = ["hamming-core"]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportExplicitAny = false
reportMissingTypeStubs = false

[build-system]
requires = ["uv_build>=0.7.21,<0.8"]
build-backend = "uv_build"
