[project]
name = "faultforge"
version = "0.0.0"
description = "Error correction and fault simulation for PyTorch"
authors = [
    { name = "Marten Roots", email = "marten.roots@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.1",
    "pydantic>=2.12.3",
    "torch>=2.7.1",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "ruff>=0.12.4",
]
torchvision = [
    "torchvision>=0.22.1",
]
cifar = [
    { include-group = "torchvision"}
]
cli = [
    "matplotlib>=3.10.5",
    "typer>=0.20.0",
    { include-group = "cifar"},
]
imagenet = [
    "pillow>=11.3.0",
    "timm>=1.0.22",
    { include-group = "torchvision"}
]
all = [
    { include-group = "cifar"},
    { include-group = "cli"},
    { include-group = "imagenet"},
]

[tool.uv]
default-groups = ["dev", "all"]

[tool.basedpyright]
typeCheckingMode = "recommended"
reportExplicitAny = false
reportMissingTypeStubs = false

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
# See https://www.maturin.rs/config.html for more options.
features = ["pyo3/extension-module"]
# https://www.maturin.rs/project_layout.html#import-rust-as-a-submodule-of-your-project
module-name = "faultforge._core"
manifest-path = "crates/faultforge-bindings/Cargo.toml"
