[package]
name = "hamming_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hamming_core"
crate-type = ["lib", "cdylib"]

[dependencies]
numpy = "0.25.0"
pyo3 = "0.25.0"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.17"

[workspace]
members = [".", "./fuzz"]
