[package]
name = "faultforge"
edition.workspace = true
version.workspace = true

[dependencies]
rand = "0.9.2"
rayon.workspace =true
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"

[[bench]]
name = "chunking"
harness = false
